# resume

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  analytics.html  no-blanket.css  og-meta.html
.cargo/: config.toml
.github/workflows/: ci.yml
resume-macro/: Cargo.toml
resume-macro/src/: lib.rs
src/: conferences.rs  hobbies.rs  lib.rs  opensource.rs  publications.rs  roles.rs  technologies.rs
src/work/: AnjLab.rs  DigitalWave.rs  KayCom.rs  Rambler.rs  RaskAI.rs  Workato.rs  mod.rs  timeline.mmd
