[package]
name = "resume"
version = "0.2.5"
edition = "2021"
authors = ["Maxim Beslousov <mail@singulared.space>"]
keywords = ["resume", "cv", "hr"]
description = "Maxim Belousov's resume"
documentation = "https://resume.singulared.space/resume/"
readme = "README.md"
homepage = "https://resume.singulared.space/"
repository = "https://github.com/singulared/resume"
license = "MIT"
categories = ["rust-patterns", "visualization"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resume-macro = { path = "./resume-macro" }

[features]
team-lead = []
closed = []
