[package]
name = "resume"
version = "0.3.4"
edition = "2024"
authors = ["Maxim Belousov <mail@singulared.space>"]
keywords = ["resume", "cv", "hr"]
description = "Maxim Belousov's resume"
documentation = "https://resume.singulared.space/resume/"
readme = "README.md"
homepage = "https://resume.singulared.space/"
repository = "https://github.com/singulared/resume"
license = "MIT"
categories = ["rust-patterns", "visualization"]
publish = false

[dependencies]
resume-macro = { path = "./resume-macro" }
simple-mermaid = "0.2"

[features]
team-lead = []
closed = []
